--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,15 @@
         app:layout_constraintTop_toBottomOf="@+id/btnStart" />
 
     <Spinner
-        android:layout_width="368dp"
-        android:layout_height="48dp"
-        tools:layout_editor_absoluteX="8dp"
         android:id="@+id/spinner"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:text="Bitrate"
